--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "scripts": {
     "dev": "webpack-dev-server --open --hot",
-    "pub": "NODE_ENV=production webpack --config webpack-dist.config.js && rm -rf .public"
+    "pub": "cross-env NODE_ENV=production webpack --config webpack-dist.config.js"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "chrome-finder": "^1.0.1",
     "compass-mixins": "^0.12.10",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.5",
     "end-webpack-plugin": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -17,6 +18,7 @@
     "style-loader": "^0.18.0",
     "web-webpack-plugin": "^1.9.3",
     "webpack": "^3.5.5",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^2.7.1"
   }
 }
